# Subete_Plugin_Creator

./: .gitignore  Cargo.toml  README.md
AsuraLightNovel/: chapter.txt  search.js  search.txt
MangaDex/: chapter.js  chapter.txt  search.txt
RawKuma/: chapter.txt  page.txt  search.js
input/Asura Light Novel/: chapter.js  page.js
input/AsuraLightNovel/: page.txt
input/Gogoanime/: episode.js  episode.txt  search.js  search.txt  video.js  video.txt
input/Manga4Life/: chapter.js  chapter.txt  page.js  page.txt  search.js  search.txt
input/MangaDex/: chapter.js  page.js  page.txt  search.js
input/RawKuma/: chapter.js  page.js  search.js  search.txt
input/Template/: chapter.js  chapter.txt  page.js  page.txt  search.js  search.txt
output/: Asura Light Novel.json  AsuraLightNovel.json  Gogoanime.json  Manga4Life.json  MangaDex.json  RawKuma.json
src/: chapters.rs  episodes.rs  helpers.rs  main.rs  models.rs
