[package]
name = "subete_plugin_creator"
version = "0.1.0"
edition = "2021"

[dependencies]
jstime_core = "0.51.0"
regex = "1.10.5"
reqwest = "0.12.5"
rustyscript = "0.4.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
