[package]
name = "subete_plugin_creator"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7"
block-modes = "0.8"
hex-literal = "0.3"
base64 = "0.13"
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
quickjs_runtime = { version = "0.14.1", features = ["console"]}
green_copper_runtime =  { git = 'https://github.com/HiRoFa/GreenCopperRuntime', branch="main" }